[SWOZO-48] cancel + delete activity, frontend + server
